name:                universe
version:             0.5
synopsis:            Classes for types where we know all the values
description:         Munge finite and recursively enumerable types
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          daniel@wagner-home.com
copyright:           2013 Daniel Wagner
category:            Data
build-type:          Simple
cabal-version:       >=1.8
source-repository head
    type:            git
    location:        https://github.com/dmwit/universe
source-repository this
    type:            git
    location:        https://github.com/dmwit/universe
    tag:             0.5

library
  exposed-modules:     Data.Universe,
                       Data.Universe.Helpers,
                       Data.Universe.Instances,
                       Data.Universe.Instances.Eq,
                       Data.Universe.Instances.Ord,
                       Data.Universe.Instances.Read,
                       Data.Universe.Instances.Show,
                       Data.Universe.Instances.Traversable
  if impl(ghc >= 7.4)
    cpp-options:       -DDEFAULT_SIGNATURES
  build-depends:       base                   >=4   && <5  ,
                       comonad                >=4   && <4.1,
                       containers             >=0.1 && <1  ,
                       keys                   >=0.1 && <4  ,
                       mtl                    >=1.0 && <2.2,
                       adjunctions            >=4   && <4.1,
                       transformers           >=0.2 && <0.4,
                       void                   >=0.1 && <0.7
