name:                universe-base
version:             1.0.2.1
synopsis:            A class for finite and recursively enumerable types and some helper functions for enumerating them
homepage:            https://github.com/dmwit/universe
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           2014 Daniel Wagner
category:            Data
build-type:          Simple
cabal-version:       >=1.10
source-repository head
    type:            git
    location:        https://github.com/dmwit/universe
source-repository this
    type:            git
    location:        https://github.com/dmwit/universe
    tag:             base-1.0.2.1

library
  exposed-modules:     Data.Universe.Class, Data.Universe.Helpers
  other-extensions:    CPP
  build-depends:       base >=4 && <5
  default-language:    Haskell2010
  if impl(ghc >= 7.4)
    cpp-options:       -DDEFAULT_SIGNATURES
    other-extensions:  DefaultSignatures
