name:                universe-template
version:             1.1
synopsis:            Template Haskell functions to derive Universe instances
description:
homepage:            https://github.com/dmwit/universe
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner and Obsidian Systems LLC
maintainer:          me@dmwit.com
copyright:           Daniel Wagner and Obsidian Systems LLC 2018
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC==8.0.2
  GHC==8.4.3

source-repository head
    type:            git
    location:        https://github.com/dmwit/universe
source-repository this
    type:            git
    location:        https://github.com/dmwit/universe
    tag:             1.1

library
  exposed-modules:     Data.Universe.TH
  build-depends:       base                    >=4   && <5  ,
                       dependent-sum           ==0.4.*      ,
                       template-haskell        >=2.11 && <2.14,
                       th-extras               ==0.0.*      ,
                       universe-base           >=1.0 && <1.2,
                       universe-instances-base >=1.0 && <1.2
  default-language:    Haskell2010
  other-extensions:    FlexibleContexts
  ghc-options:         -Wall
  if impl(ghc >= 7.10)
    ghc-options:       -fno-warn-tabs

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: test.hs
  build-depends: base,
                 universe-base,
                 universe-template,
                 universe-instances-base,
                 dependent-sum-template,
                 dependent-sum
  ghc-options: -Wall
