name:                universe
version:             1.0
synopsis:            Classes for types where we know all the values
description:         Munge finite and recursively enumerable types
homepage:            https://github.com/dmwit/universe
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           Daniel Wagner 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  changelog
source-repository head
    type:            git
    location:        https://github.com/dmwit/universe
source-repository this
    type:            git
    location:        https://github.com/dmwit/universe
    tag:             1.0

library
  exposed-modules:     Data.Universe,
                       Data.Universe.Instances,
                       Data.Universe.Instances.Reverse
  build-depends:       universe-instances-base       >=1.0 && <1.1,
                       universe-instances-extended   >=1.0 && <1.1,
                       universe-reverse-instances    >=1.0 && <1.1,
                       universe-instances-trans      >=1.0 && <1.1
  default-language:    Haskell2010
