name:                universe
version:             1.1
synopsis:            A class for finite and recursively enumerable types.
description:
  A class for finite and recursively enumerable types and some helper functions for enumerating them
  .
  @
  class Universe a where universe :: [a]
  class Universe a => Finite a where universeF :: [a]; universeF = universe
  @
  .
  This also provides instances from @universe-instances-*" packages.

homepage:            https://github.com/dmwit/universe
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           Daniel Wagner 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  changelog
tested-with:
  GHC==7.0.4,
  GHC==7.2.2,
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.3

source-repository head
    type:            git
    location:        https://github.com/dmwit/universe
source-repository this
    type:            git
    location:        https://github.com/dmwit/universe
    tag:             1.1

library
  exposed-modules:     Data.Universe,
                       Data.Universe.Instances,
                       Data.Universe.Instances.Reverse
  build-depends:       universe-instances-base       >=1.1 && <1.2,
                       universe-instances-containers >=1.1 && <1.2,
                       universe-instances-extended   >=1.1 && <1.2,
                       universe-reverse-instances    >=1.1 && <1.2,
                       universe-instances-trans      >=1.1 && <1.2
  default-language:    Haskell2010
  if impl(ghc >= 7.10)
    ghc-options:       -fno-warn-tabs
