name:          universe-dependent-sum
version:       1.2
synopsis:      Universe instances for types from dependent-sum
description:
  A class for finite and recursively enumerable types and some helper functions for enumerating them
  defined in @universe-base@ package:
  .
  @
  class Universe a where universe :: [a]
  class Universe a => Finite a where universeF :: [a]; universeF = universe
  @
  .
  This package adds
  .
  @
  class UniverseSome f where universeSome :: [Some f]
  class UniverseSome f => FiniteSome f where universeFSome :: [Some f]; universeFSome = universe
  @
  .
  classes.

homepage:      https://github.com/dmwit/universe
license:       BSD3
license-file:  LICENSE
author:        Daniel Wagner
maintainer:    me@dmwit.com
copyright:     Daniel Wagner 2014
category:      Data
build-type:    Simple
cabal-version: >=1.10
tested-with:
  GHC ==8.8.1 || ==8.6.5 || ==8.4.4 || ==8.2.2 || ==8.0.2 || ==7.10.3 || ==7.8.4 || ==7.6.3 || ==7.4.2 || ==7.0.4

source-repository head
  type:     git
  location: https://github.com/dmwit/universe

source-repository this
  type:     git
  location: https://github.com/dmwit/universe
  tag:      instances-dependent-sum-1.1

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Data.Universe.DependentSum

  build-depends:
      base              >=4.3      && <4.14
    , dependent-sum     >=0.3.2.2  && <0.7
    , some              >=1        && <1.1
    , universe-base     >=1.1      && <1.1.2
    , universe-some     >=1.2      && <1.3
