cabal-version:      2.2
name:               universe-dependent-sum
version:            1.3.1
synopsis:           Universe instances for types from dependent-sum
description:
  A class for finite and recursively enumerable types and some helper functions for enumerating them
  defined in @universe-base@ package:
  .
  @
  class Universe a where universe :: [a]
  class Universe a => Finite a where universeF :: [a]; universeF = universe
  @
  .
  This package adds
  .
  @
  class UniverseSome f where universeSome :: [Some f]
  class UniverseSome f => FiniteSome f where universeFSome :: [Some f]; universeFSome = universe
  @
  .
  classes.

homepage:           https://github.com/dmwit/universe
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Wagner
maintainer:         me@dmwit.com
copyright:          Daniel Wagner 2014
category:           Data
build-type:         Simple
extra-source-files: changelog
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1

source-repository head
  type:     git
  location: https://github.com/dmwit/universe
  subdir:   universe-dependent-sum

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Data.Universe.DependentSum
  build-depends:
      base           >=4.12  && <4.21
    , universe-some  >=1.2.2 && <1.3
