name:          universe-instances-extended
version:       1.1.1
synopsis:      Universe instances for types from selected extra packages
description:
  A class for finite and recursively enumerable types and some helper functions for enumerating them
  defined in @universe-base@ package:
  .
  @
  class Universe a where universe :: [a]
  class Universe a => Finite a where universeF :: [a]; universeF = universe
  @

homepage:      https://github.com/dmwit/universe
license:       BSD3
license-file:  LICENSE
author:        Daniel Wagner
maintainer:    me@dmwit.com
copyright:     Daniel Wagner 2014
category:      Data
build-type:    Simple
cabal-version: >=1.10
tested-with:
  GHC ==8.8.1 || ==8.6.4 || ==8.4.4 || ==8.2.2 || ==8.0.2 || ==7.10.3 || ==7.8.4 || ==7.6.3 || ==7.4.2 || ==7.0.4

source-repository head
  type:     git
  location: https://github.com/dmwit/universe

source-repository this
  type:     git
  location: https://github.com/dmwit/universe
  tag:      instances-extended-1.1

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Data.Universe.Instances.Extended
  build-depends:
      adjunctions    >=4.3 && <4.5
    , comonad        >=4.2 && <5.1
    , containers
    , universe-base  >=1.1 && <1.1.2

  if impl(ghc >=8.6.1)
    build-depends:   base           >=4.12 && <4.14

  if impl(ghc  <8.0.1)
    build-depends:   base           >=4.3  && <4.14
                   , contravariant
                   , semigroups

  if impl(ghc >=8.0.1)
    build-depends:   base           >=4.9  && <4.14
                   , contravariant
