name:               universe-reverse-instances
version:            1.1.1
x-revision:         2
synopsis:
  Instances of standard classes that are made possible by enumerations

description:
  For example this package provides a @Eq (a -> b)@ instance:
  .
  @
  instance (Finite a, Eq b) => Eq (a -> b) where
  f == g = and [f x == g x | x <- universeF]
  @

homepage:           https://github.com/dmwit/universe
license:            BSD3
license-file:       LICENSE
author:             Daniel Wagner
maintainer:         me@dmwit.com
copyright:          Daniel Wagner 2014
category:           Data
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: changelog
tested-with:
  GHC ==7.0.4
   || ==7.4.2
   || ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.4
   || ==9.0.2
   || ==9.2.4
   || ==9.4.1

source-repository head
  type:     git
  location: https://github.com/dmwit/universe

source-repository this
  type:     git
  location: https://github.com/dmwit/universe
  tag:      universe-1.2.1

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Data.Universe.Instances.Eq
    Data.Universe.Instances.Ord
    Data.Universe.Instances.Read
    Data.Universe.Instances.Show
    Data.Universe.Instances.Traversable

  build-depends:
      base           >=4.3   && <4.18
    , containers     >=0.4   && <0.7
    , universe-base  >=1.1.2 && <1.1.4

  if impl(ghc >=9.0)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode
