cabal-version:      2.2
name:               universe-reverse-instances
version:            1.1.2
synopsis:
  Instances of standard classes that are made possible by enumerations

description:
  For example this package provides a @Eq (a -> b)@ instance:
  .
  @
  instance (Finite a, Eq b) => Eq (a -> b) where
  f == g = and [f x == g x | x <- universeF]
  @

homepage:           https://github.com/dmwit/universe
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Wagner
maintainer:         me@dmwit.com
copyright:          Daniel Wagner 2014
category:           Data
build-type:         Simple
extra-source-files: changelog
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1

source-repository head
  type:     git
  location: https://github.com/dmwit/universe
  subdir:   universe-reverse-instances

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Data.Universe.Instances.Eq
    Data.Universe.Instances.Ord
    Data.Universe.Instances.Read
    Data.Universe.Instances.Show
    Data.Universe.Instances.Traversable

  build-depends:
      base           >=4.3   && <4.21
    , containers     >=0.4   && <0.8
    , universe-base  >=1.1.4 && <1.1.5

  if impl(ghc >=9.0)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode
