name:               universe-some
version:            1.2.1
x-revision:         3
synopsis:           Universe instances for Some from some
description:
  A class for finite and recursively enumerable types and some helper functions for enumerating them
  defined in @universe-base@ package:
  .
  @
  class Universe a where universe :: [a]
  class Universe a => Finite a where universeF :: [a]; universeF = universe
  @
  .
  This package adds
  .
  @
  class UniverseSome f where universeSome :: [Some f]
  class UniverseSome f => FiniteSome f where universeFSome :: [Some f]; universeFSome = universe
  @
  .
  classes.

homepage:           https://github.com/dmwit/universe
license:            BSD3
license-file:       LICENSE
author:             Daniel Wagner, Oleg Grenrus
maintainer:         me@dmwit.com
copyright:          Daniel Wagner 2014, Oleg Grenrus 2019
category:           Data
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: changelog
tested-with:
  GHC ==7.0.4
   || ==7.4.2
   || ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.4
   || ==9.0.2
   || ==9.2.4
   || ==9.4.1

source-repository head
  type:     git
  location: https://github.com/dmwit/universe

source-repository this
  type:     git
  location: https://github.com/dmwit/universe
  tag:      universe-1.2.1

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Data.Universe.Some
    Data.Universe.Some.TH

  build-depends:
      base              >=4.3      && <4.18
    , some              >=1.0.2    && <1.1
    , template-haskell  >=2.5      && <2.20
    , th-abstraction    >=0.4.2.0  && <0.5
    , transformers      >=0.3.0.0  && <0.7
    , universe-base     >=1.1.2    && <1.1.4

  if !impl(ghc >=7.8)
    build-depends: type-equality >=1 && <1.1

  if impl(ghc >=7.10.3)
    build-depends: transformers >=0.4.2.0

  if !impl(ghc >=7.10.3)
    build-depends: transformers-compat >=0.6.1 && <0.8

  if impl(ghc >=8.10)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode

test-suite th-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:
      base
    , some
    , template-haskell
    , universe-base
    , universe-some
