cabal-version:      2.2
name:               universe-some
version:            1.2.2
synopsis:           Universe instances for Some from some
description:
  A class for finite and recursively enumerable types and some helper functions for enumerating them
  defined in @universe-base@ package:
  .
  @
  class Universe a where universe :: [a]
  class Universe a => Finite a where universeF :: [a]; universeF = universe
  @
  .
  This package adds
  .
  @
  class UniverseSome f where universeSome :: [Some f]
  class UniverseSome f => FiniteSome f where universeFSome :: [Some f]; universeFSome = universe
  @
  .
  classes.

homepage:           https://github.com/dmwit/universe
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Wagner, Oleg Grenrus
maintainer:         me@dmwit.com
copyright:          Daniel Wagner 2014, Oleg Grenrus 2019
category:           Data
build-type:         Simple
extra-source-files: changelog
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1

source-repository head
  type:     git
  location: https://github.com/dmwit/universe
  subdir:   universe-some

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Data.Universe.Some
    Data.Universe.Some.TH

  build-depends:
      base              >=4.12    && <4.21
    , some              >=1.0.6    && <1.1
    , template-haskell  >=2.14     && <2.23
    , th-abstraction    >=0.7.0.0  && <0.8
    , transformers      >=0.5.6.2  && <0.7
    , universe-base     >=1.1.4    && <1.1.5

  if impl(ghc >=9)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode

test-suite th-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:
      base
    , some
    , template-haskell
    , universe-base
    , universe-some
